# 2020RM-Armor-Detect

./: CMakeLists.txt  README.md  main.cpp  svm2.xml
Include/: README.md  anglesolver.h  armordector.h  kalmanfilter.h  opencv_extended.h  predictor.h  serial.h
SVM train code/: README.md  test.cpp
src/: numeric_rm.cpp  opencv_extended.cpp  serial.cpp
